# amplifier

./: .gitignore  Makefile  README.md  SUPER_PLANNER_FIXES.md  VIMUNIT_COMPLETION_PLAN.md  VI_AUDIT_RESUMPTION.md  VI_EDITOR_SUPER_PLANNER_SUMMARY.md  VI_REWRITE_PROJECT_SUMMARY.md  create_vi_project.py  execute_vi_project.py  pyproject.toml  ruff.toml  test_agent_mapper.py  vi_completion_plan.md  vi_completion_project.json  vi_functional_test_results.txt  vi_pytest_results.txt  vi_torture_results.txt  vi_torture_test_results.txt  visualize_vi_project.py
.amplifier/: project.json
.beads/: amplifier.db  current_issues.json  issues.jsonl
.claude/: settings.json
.claude/agents/: bug-hunter.md  modular-builder.md  phase-executor.md  phase-reviewer.md  project-planner.md  super-planner-coordinator.md  zen-architect.md
.claude/commands/: bplan.md  ideas.md  loop.md  superplanner.md
.devcontainer/: post-create.sh
ai_flows/: README.md  bug-investigation.yaml  code-review-simple.yaml  documentation-gen.yaml  feature-planning.yaml  knowledge-synthesis.yaml  loop-until-done.yaml  test_phase2_manual.yaml
ai_working/decisions/: super-planner-verification-design.md
ai_working/dotrunner/: ARCHITECTURE_DECISIONS.md  COMPREHENSIVE_REVIEW_COMPLETE.md  DESIGN.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_VALIDATION.md  PHASES_3_4_COMPLETE.md  PHASES_5_6_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_2_DESIGN.md  PHASE_2_INTEGRATION_TESTS.md  PROGRESS_NOTES.md  README.md  REAL_GAPS.md  SKEPTICAL_REVIEW_GAPS.md  SPECIFICATION.md  USER_GUIDE.md  __init__.py  __main__.py  cli.py  context.py  create_beads_tasks.py  engine.py  evaluator.py  executor.py  (+4 more)
amplifier/presenter/: .gitignore  Makefile  __init__.py  enhancer.py  exporter.py  generator.py  main.py  models.py  parser.py  pyproject.toml
amplifier/presenter/plan/: ARCHITECTURE.md  MODULE_SPECS.md  SAMPLE_INPUTS_OUTPUTS.md  TASK_LIST.md
amplifier/presenter/presenter/: exporter.py  generator.py  models.py  parser.py
amplifier/presenter/tests/fixtures/sample_outlines/: simple.md
docs/: AMPLIFIER_WALKING_DECK.md  AMPLIFIER_WALKING_DECK.pptx
ideas/: claude_template_analysis.md
instructor/: agents.html  examples.html  script.js  setup.html
plan/: IMPLEMENTATION_ROADMAP.md  PROGRESS.md  README.md  TEST_PLAN.md  website-generator-tool-plan.md
presenter/: __init__.py  enhancer.py  main.py
scenarios/deck_builder/: README.md  __init__.py  build_cli.py  generator.py  layouts.py  main.py  models.py  parse_cli.py  parser.py  pyproject.toml  themes.py
scenarios/deck_builder/tests/: __init__.py  test_deck_builder.py
scenarios/deck_densifier/: README.md  __init__.py  __main__.py  densifier.py  main.py  models.py  pyproject.toml
scenarios/deck_densifier/tests/: test_densifier.py
scenarios/deck_densifier/tests/fixtures/: sample_deck.json
tests/: __init__.py  conftest.py  test_agent_interface.py  test_auth.py  test_beads_evidence.py  test_doc.py  test_empty.py  test_enhancer.py  test_evidence_blocking.py  test_evidence_proof_real.py  test_evidence_system_adversarial_proof.py  test_feature.py  test_module.py  test_mymodule.py  test_new_feature.py  test_parser.py  test_task_11_level_1_2.py  test_task_64_level_1_0.py  test_todowrite_evidence.py  test_valid.py  test_vi_bracket_movement.py  test_vi_editing_commands.py
vi-editor/: FINAL_STATUS.md  HOW_TO_RUN.md  INTEGRATION_TEST_RESULTS.md  PROJECT_COMPLETION.md  README.md  TESTING.md  VI_COMPLETION_REPORT.md  debug_editor.py  manual_test.sh  pyproject.toml  setup.py  test.txt  test_interactive.py  test_p_debug.py  test_p_positions.py  test_vim_p.py
vi-editor/src/: __init__.py
vi-editor/tests/: file_io_integration_tests.py  integration_test_framework.py  integration_tests.py  test_buffer.py  test_cursor.py  test_ex_commands.py  test_integration.py  test_motion.py  test_operators.py  test_visual.py
vi-editor/vi_editor/: __init__.py  editor.py  main.py
vi-editor/vi_editor/commands/: __init__.py  ex.py  motion.py  normal.py  visual.py
vi-editor/vi_editor/core/: __init__.py  buffer.py  cursor.py  mode.py  state.py
vi-editor/vi_editor/file_ops/: __init__.py  backup.py  file_handler.py  recovery.py
vi-editor/vi_editor/ui/: __init__.py  display.py  input.py  renderer.py  terminal.py
vi_editor/: README.md  __init__.py
vi_editor_project/: ARCHITECTURE.md  CLI_IMPLEMENTATION.md  CLI_README.md  DEVELOPER_GUIDE.md  FINAL_REPORT.md  INSERT_MODE_COMPLETION.md  NAVIGATION_COMPLETION.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  REPLACE_COMMANDS_COMPLETION.md  TASK_COMPLETION_SUMMARY.md  TEST_REPORT.md  USER_MANUAL.md  buffer.py  command_mode.py  create_buffer_tests.py  create_insert_tests.py  create_navigation_tests.py  display.py  editor.py  file_io.py  insert_mode.py  main.py  search.py  test_delete.py  test_display.py  test_file_io.py  test_framework.py  test_insert.py  test_integration.py  test_navigation.py  test_replace.py  test_search.py  test_undo_redo.py  test_visual.py  test_yank_paste.py  undo_redo.py  vi  visual_mode.py
website_generator/: README.md  test_complete_website.py  test_full_generation.py
(+675 files in other folders)
