[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deck-densifier"
version = "1.0.0"
description = "Compress presentation slides to storyteller mode using LLM intelligence"
authors = [
    { name = "Amplifier Team", email = "amplifier@example.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai",
    "click>=8.0.0",
]

[project.scripts]
deck-densifier = "scenarios.deck_densifier.main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyright]
include = ["scenarios/deck_densifier"]
exclude = [".venv", "__pycache__"]
typeCheckingMode = "standard"